# Haskell-NSGA2

./: .gitignore  README.md  nsga.cabal
.stack-work/install/10ee698a/flag-cache/: HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  base-compat-0.9.1-Jorka5wAHbt82D18A4gF6b  code-page-0.1.1-6y7hBb2X6Z5GXthLAZYhtH  doctest-0.11.1-16dHsIi1ZiuFIBSOPOauJL  ghc-paths-0.1.0.9-GIOnKzk0HmEBZ77Q1HsThK  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  mwc-random-0.13.5.0-LMmPnBqFcyXKNTZwO31mEb  nsga-0.0.1  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  split-0.2.3.1-IJKK4pOCYGKud0jZImZke  syb-0.6-C65vWCsht6A8uLstpQIXyj  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld  vector-0.11.0.0-BEDZb5o2QOhGbIm6ky7rl6  vector-algorithms-0.7.0.1-8R8UpWgvBC926XMxBjYPpx
.stack-work/install/12018b8a/flag-cache/: QuickCheck-2.8.2-63caac693c87382c71ed38d317d62bae  nsga-0.0.1
.stack-work/install/28cbf0ed/flag-cache/: HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  base-compat-0.9.1-Jorka5wAHbt82D18A4gF6b  code-page-0.1.1-6y7hBb2X6Z5GXthLAZYhtH  doctest-0.11.1-16dHsIi1ZiuFIBSOPOauJL  extensible-exceptions-0.1.1.4-3h0ykvvAO915cRhUyj3rRV  ghc-paths-0.1.0.9-GIOnKzk0HmEBZ77Q1HsThK  hostname-1.0-FUFoPPZvfKnIchB3q3WmBx  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  mwc-random-0.13.5.0-LMmPnBqFcyXKNTZwO31mEb  nsga-0.0.1  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  regex-base-0.93.2-4lnOy3Rb1yfISFVEXVfJuH  regex-posix-0.95.2-Fy6xYMm8dnjHHt23b8RdmR  split-0.2.3.1-IJKK4pOCYGKud0jZImZke  syb-0.6-C65vWCsht6A8uLstpQIXyj  test-framework-0.8.1.1-9YiepV9kKUp6xbsppt18A1  test-framework-hunit-0.3.0.2-HjSxdSCeHfvDNeZoNUcBEv  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD  vector-0.11.0.0-BEDZb5o2QOhGbIm6ky7rl6  vector-algorithms-0.7.0.1-8R8UpWgvBC926XMxBjYPpx  xml-1.3.14-3wjuWY0dinH7o3REE9CkMx
.stack-work/install/8bd8b946/flag-cache/: aeson-0.11.2.0-49ZVsVU9Jil3dlMWYkQoSe  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  conduit-1.2.6.6-A13Xk45AhQaBgQ7YYM2Gkj  cpphs-1.20.1-LoKjzPkwfAQG6OHzHMH5VD  dlist-0.7.1.2-LXvO1Bw0RvFzUhQMljfgc  enclosed-exceptions-1.0.1.1-3uhw77nfDRGFabcdJJWu2h  happy-1.19.5  (+17 more)
src/: AdultSelection.hs  CrowdDist.hs  GeneticOps.hs  Genome.hs  Load.hs  Main.hs  ParentSelection.hs  Population.hs  RandUtils.hs  RankSort.hs  SortUtils.hs  Test.hs  rubbish.hs
test/: Main.hs  TestAdultSelection.hs  TestCrowdDist.hs  TestGeneticOps.hs  TestGenome.hs  TestLoad.hs  TestMain.hs  TestParentSelection.hs  TestPopulation.hs  TestRandUtils.hs  TestRankSort.hs  TestSortUtils.hs  distance.txt
