name: nsga
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable nsga
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        vector -any,
        vector-algorithms -any,
        fixed-vector -any,
        random -any,
        transformers -any,
        mwc-random -any,
        split -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        RankSort,
        Genome,
        GeneticOps,
        CrowdDist,
        SortUtils,
        AdultSelection,
        ParentSelection,
        RandUtils,
        Load,
        Population
    ghc-options: -ferror-spans -fwarn-amp -Wall

test-suite test-nsga
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        vector -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
