name: nsga
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable nsga
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        HUnit -any,
        base -any,
        doctest -any,
        vector -any,
        vector-algorithms -any,
        random -any,
        transformers -any,
        mwc-random -any,
        split -any,
        mtl,
        MonadRandom >= 0.4.2.3
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        RankSort,
        Genome,
        GeneticOps,
        CrowdDist,
        SortUtils,
        AdultSelection,
        ParentSelection,
        RandUtils,
        Load,
        Population,
        Rubbish,
        Test
    ghc-options: -ferror-spans -Wall -fno-warn-unused-binds -fno-warn-unused-matches -Wunused-top-binds -g

test-suite test-nsga
    type: exitcode-stdio-1.0
    main-is: TestMain.hs
    build-depends:
        -- QuickCheck -any,
        -- HUnit -any,
        -- test-framework -any,
        -- test-framework-hunit -any,
        tasty,
        tasty-hunit,
        base -any,
        doctest -any,
        vector -any,
        random -any,
        mtl,
        MonadRandom >= 0.4.2.3
    default-language: Haskell2010
    hs-source-dirs: test, src
    other-modules:
        TestRankSort,
        TestGenome,
        TestGeneticOps,
        TestCrowdDist,
        TestSortUtils,
        TestAdultSelection,
        TestParentSelection,
        TestRandUtils,
        TestLoad,
        TestPopulation
    ghc-options: -ferror-spans
